src/test/resources/purescript_examples/failing/TypeSynonyms.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith CycleInTypeSynonym\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSTypeSynonymDeclarationImpl(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PsiElement(proper name)('T1')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(TypeConstructor)
              PSProperNameImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Array')
                  PsiElement(whitespace)(' ')
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(TypeConstructor)
              PSProperNameImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('T2')
                  PsiElement(whitespace)('\n\n')
      PSTypeSynonymDeclarationImpl(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PsiElement(proper name)('T2')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(TypeConstructor)
              PSProperNameImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('T1')
                  PsiElement(whitespace)('\n')
